--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -65,6 +65,9 @@ em:not(.icon)
 .mic-wrapper.media-info-card .mic-content .mic-pic label
 .h5share-container .text-area .text-content .tag
 .groom-module .type-name
+.bangumi-item .cover-wrapper .corner-tag.badge_0
+.live-container .status
+.video-card-common .title .live
   border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
