--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -222,6 +222,7 @@ button
 .game-list-all
 .bind-info .note-footer .btn-group .common-btn
 .watch-later-list header .d-btn
+.cinema-movie-wrapper .slider-contro span
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
