--- a/bilibili-lite/src/home/base.styl
+++ b/bilibili-lite/src/home/base.styl
@@ -35,10 +35,10 @@
 
 .time-line .tab-switch .tab-switch-item.on
 .time-line .tab-switch .tab-switch-item:hover
-	color: var(--c-accent) !important
+	color var(--c-accent) !important
 
 .time-line .tab-switch .tab-switch-item.on
-	border-color: var(--c-accent) !important
+	border-color var(--c-accent) !important
 
 .first-screen
 	margin-top 40px
@@ -237,7 +237,7 @@
 
 /* 页脚 */
 .international-footer
-	display bloack !important
+	display block !important
 	border-top 1px solid var(--c-border)
 	background-color var(--c-background)
 
