--- a/bilibili-lite/src/home/index.styl
+++ b/bilibili-lite/src/home/index.styl
@@ -1,4 +1,4 @@
-@-moz-document regexp("^.*bilibili.com/?((index\\.html)|(\\?.*))?") {
+@-moz-document regexp("^.*www.bilibili.com/?((index\\.html)|(\\?.*))?") {
 	/* 主页样式 */
 	@import 'base'
 }
