--- a/bilibili-lite/src/public/index.styl
+++ b/bilibili-lite/src/public/index.styl
@@ -12,7 +12,7 @@ domain("biligame.com") {
   @import 'feed'
   @import 'error'
 }
-@-moz-document regexp("^.*bilibili.com/?((index\\.html)|(\\?.*))?"),
+@-moz-document regexp("^.*www.bilibili.com/?((index\\.html)|(\\?.*))?"),
 url-prefix("https://www.bilibili.com/v/"),
 url-prefix("https://www.bilibili.com/anime/"),
 url-prefix("https://www.bilibili.com/guochuang/"),
