--- a/bilibili-lite/src/t/base.styl
+++ b/bilibili-lite/src/t/base.styl
@@ -40,6 +40,9 @@
 .tab-wrap .tab-item.active
   background-color transparent !important
 
+.tab-bar .line
+  background-color var(--c-accent) !important
+
 #app
 .fixed-bg
   background-image none !important
