--- a/bilibili-lite/src/v/blackboard.styl
+++ b/bilibili-lite/src/v/blackboard.styl
@@ -1,8 +1,11 @@
 /* 广场 专题 帮助 */
-.banner
+.activity-main .banner
 .international-footer
 .active-title .b-active-i
 .topic-title .b-topic-i
+.activity.topic-preview-wrapper .page_prev
+.activity.topic-preview-wrapper .page_next
+#socialRecruit .side_main .shadow
   display none !important
 
 .box-body
@@ -17,6 +20,9 @@ body[style]
 .help-content img
 .collapse-item--active
 .collapse-item:hover
+#socialRecruit .catalog_bg
+#socialRecruit .side_main
+#socialRecruit .side_main .select .block.active
   background-color var(--c-hover) !important
 
 .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar
@@ -26,10 +32,17 @@ body[style]
 .activity-playlist .activity-playlist-item
 .help-body p
 .mCSB_scrollTools .mCSB_draggerRail
+#socialRecruit .master_list
   background-color transparent !important
+
+.helper-icon-dots
+#socialRecruit .jobs-icon-blue-dots
+  background-color var(--c-accent) !important
 
 .active-title .b-active-t
 .pagelist .flip-left .ellipsis
+#socialRecruit .master_title .big_title
+#socialRecruit .jobs_list_title div
   color var(--c-title) !important
 
 .act-list ul li .event_status
@@ -38,13 +51,22 @@ body[style]
 
 .nav-tab .on
 .collapse-item--active .collapse-title
+#socialRecruit .side_main .select .block.active
   color var(--c-accent) !important
 
 .active-title
 .nav-tab
 .bili-share-pc
 .bili-share-pc .vertical-line
+#socialRecruit .jobs_numb
+#socialRecruit .list_block:hover
   border-color var(--c-border) !important
+
+#socialRecruit .side_main .select .block.active
+  border-color var(--c-accent) !important
+
+#socialRecruit .list_block
+  border-top-color var(--c-border) !important
 
 .help-list
 .help-box
