--- a/bilibili-lite/src/v/game.styl
+++ b/bilibili-lite/src/v/game.styl
@@ -33,6 +33,7 @@
 .game-menu .more
 .switch-item
 .team-box .team-item .team-name
+.international-header .mini-type
   background-color transparent !important
 
 .schedule-filter .filter-content .content-all div.active
@@ -91,7 +92,16 @@
 .filter-wrap .toggle-open-select
 .team-box .infobox
 .team-box .team-item
+.international-header .mini-type
+.international-header .mini-type .nav-search #nav_searchform
+.van-popover .mini-type .nav-search #nav_searchform
   border 0 !important
+
+.international-header .mini-type
+  box-shadow none !important
+
+.game-banner
+  margin-top -56px
 
 .game-banner .banner-title
   bottom -1px
