--- a/bilibili-lite/src/v/musicplus.styl
+++ b/bilibili-lite/src/v/musicplus.styl
@@ -7,10 +7,16 @@
   background-color var(--c-hover) !important
 
 .main-menu .search-bar input
+.international-header .mini-type
   background-color transparent !important
 
 .storey-title .l-con
   color var(--c-title) !important
+
+.video-card-reco .info-box .info p
+.video-card-reco .info-box .info p span
+.video-card-common .card-pic a .count div span
+  color var(--c-white) !important
 
 .main-menu .tabs a.active
 .main-menu .tabs a:hover
@@ -18,6 +24,7 @@
 
 .main-menu .search-bar
 .article-card
+.home-slide .trigger img
   border-color var(--c-border) !important
 
 .home-slide .trigger img.on
@@ -25,10 +32,19 @@
 
 .main-menu .tabs
 .main-menu .tabs a.active
+.international-header .mini-type
+.international-header .mini-type .nav-search #nav_searchform
+.van-popover .mini-type .nav-search #nav_searchform
   border 0 !important
+
+.international-header .mini-type
+  box-shadow none !important
 
 .main-menu .search-bar button
   position initial
+
+.home-slide
+  margin-top -56px
 
 .home-video .video-list .video-card-common
 .video-card-common
@@ -37,8 +53,13 @@
 
 .main-menu .search-bar button
 .select-type .toggle
-  border 0 !important
+.storey-title .exchange-btn .btn
+  border-color var(--c-border) !important
   background-color transparent !important
+  color var(--c-text) !important
+
+  &:hover
+    background-color var(--c-hover) !important
 
   &::after
     content none !important
